translate:File menu and Alerts

--- a/br.ini
+++ b/br.ini
@@ -1,48 +1,52 @@
 # Aseprite
-# Copyright (C) 2018-2019  Igara Studio S.A.
 # Copyright (C) 2016-2018  David Capello
 
+#===========Aseprite Versão Português Brasil===========
+# versão			：1.1
+# Última atualização		：19 Mar 2019
+# Autor			：rochajg (https://github.com/rochajg)
+
 [advanced_mode]
-title = Warning - Important
-description = You are going to enter in "Advanced Mode".
+title = Cuidado - Importante #Warning - Important
+description = Você está entrando no "Modo Avançado" #You are going to enter in "Advanced Mode".
 
 [ask_for_color_profile]
-title = Color Profile
-sprite_with_profile = The sprite contains a color profile.
-sprite_without_profile = The sprite doesn't contain a color profile.
+title = Perfil de Cor #Color Profile
+sprite_with_profile = O sprite contém um perfil de cor. #The sprite contains a color profile.
+sprite_without_profile = O sprite não contém um perfil de cor. #The sprite doesn't contain a color profile.
 
 [statusbar_tips]
-all_layers_are_locked = All selected layers are locked
+all_layers_are_locked = Todas as camadas selecionadas estão bloqueadas #All selected layers are locked
 
 [alerts]
-applying_filter = FX<<Applying effect...||&Cancel
+applying_filter = FX<<Aplicando efeito... ||&Cancelar #FX<<Applying effect...||&Cancel
 auto_remap = <<<END
-Automatic Remap
-<<The remap operation cannot be perfectly done for more than 256 colors.
-<<Do you want to continue anyway?
-||&OK||&Cancel"
+Remap Automático #Automatic Remap
+<<A operação de remap não pode ser concluída para mais de 256 cores. #<<The remap operation cannot be perfectly done for more than 256 colors.
+<<Deseja continuar? #<<Do you want to continue anyway?
+||&Continuar||&Cancelar" #||&OK||&Cancel"
 END
-cannot_delete_all_layers = Error<<You cannot delete all layers.||&OK
+cannot_delete_all_layers = Erro<<Não é possível deletar todas as camadas.||&OK #Error<<You cannot delete all layers.||&OK
 cannot_file_overwrite_on_export = <<<END
-Overwrite Warning
-<<You cannot Export with the same name (overwrite the original file).
-<<Use File > Save As menu option in that case.
+Arquivo já existente #Overwrite Warning
+Não é possível exportar um arquivo com o mesmo nome (Sobrescrever o arquivo) #<<You cannot Export with the same name (overwrite the original file).
+<<Use o menu "Arquivo > Salvar como" nesse caso #<<Use File > Save As menu option in that case.
 ||&OK
 END
-cannot_open_file = Problem<<Cannot open file:<<{0}||&OK
-cannot_open_folder = Problem<<Cannot open folder:<<{0}||&OK
-cannot_save_in_read_only_file = Problem<<The selected file is read-only. Try with other file.||&Go back
-clipboard_access_locked = Error<<Cannot access to the clipboard.<<Maybe other application is using it.||&OK
-clipboard_image_format_not_supported = Error<<The current clipboard image format is not supported.||&OK
+cannot_open_file = Erro<<Falha ao abrir o arquivo:<<{0}||&OK #Problem<<Cannot open file:<<{0}||&OK
+cannot_open_folder = Erro<<Falha ao abrir a pasta:<<{0}||&OK #Problem<<Cannot open folder:<<{0}||&OK
+cannot_save_in_read_only_file = Erro<<O arquivo seleciona é apenas-leitura. Tente com outro arquivo.||&Voltar #Problem<<The selected file is read-only. Try with other file.||&Go back
+clipboard_access_locked = Erro<<Não foi possível acessar a área de transferência.<<Talvez outra aplicação esteja usando.||&OK #Error<<Cannot access to the clipboard.<<Maybe other application is using it.||&OK
+clipboard_image_format_not_supported = Erro<<Esta imagem está em um formato não suportado.||&OK #Error<<The current clipboard image format is not supported.||&OK
 delete_selected_backups = <<<END
-Warning
-<<Do you really want to delete the selected {0} backup(s)?
-||&Yes||&No
+Aviso #Warning
+Deletar este(s) backup(s): {0} ? #<<Do you really want to delete the selected {0} backup(s)?
+||&Sim||&Não #||&Yes||&No
 END
 delete_shortcut = <<<END
-Warning
-<<Do you really want to delete '{0}' keyboard shortcut?
-||&Yes||&No
+Aviso #Warning
+Deseja deletar o atalho '{0}' ? #<<Do you really want to delete '{0}' keyboard shortcut?
+||&Sim||&Não #||&Yes||&No
 END
 empty_rect_importing_sprite_sheet = <<<END
 Import Sprite Sheet
@@ -676,21 +680,21 @@ mode = Mode:
 opacity = Opacity:
 
 [main_menu]
-file = &File
-file_new = &New...
-file_open = &Open...
-file_open_recent = Open &Recent
-file_save = &Save
-file_save_as = Save &As...
-file_export = Expor&t...
-file_close = &Close
-file_close_all = Close All
-file_import_sprite_sheet = &Import Sprite Sheet
-file_export_sprite_sheet = &Export Sprite Sheet
-file_repeat_last_export = Repeat &Last Export
+file = &Arquivo
+file_new = &Novo...
+file_open = &Abrir...
+file_open_recent = Abrir &Recentes
+file_save = &Salvar
+file_save_as = Savar &Como...
+file_export = Expor&tar...
+file_close = Fe&char
+file_close_all = Fechar todos
+file_import_sprite_sheet = &Importar Sprite Sheet
+file_export_sprite_sheet = &Exportar Sprite Sheet
+file_repeat_last_export = Repetir Última exportação
 file_scripts = Scri&pts
-file_open_script_folder = &Open Scripts Folder
-file_exit = E&xit
+file_open_script_folder = &Abrir pasta de Scripts
+file_exit = Sair
 edit = &Edit
 edit_undo = &Undo
 edit_redo = &Redo
