--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "contributes": {
     "languages": [{
-      "id": "brazilian-portuguese",
+      "id": "brazilian",
       "path": "./br.ini"
     }]
   }
