--- a/br.ini
+++ b/br.ini
@@ -4,7 +4,7 @@
 #===========Aseprite Versão Português Brasil===========
 # versão			：1.1
 # Última atualização		：19 Mar 2019
-# Autor			：rochajg (https://github.com/rochajg)
+# Autor			：rochajg (https://github.com/rochajg); pudinzinho (https://github.com/pudinzinho)
 
 [advanced_mode]
 title = Cuidado - Importante #Warning - Important
