translate: symmetry, webp_options--,  user_data, undo_history, tools--

--- a/br.ini
+++ b/br.ini
@@ -1327,58 +1327,58 @@ eraser_tooltip = <<<END
   or transparent color in any other layer.
 * Right Button: Replace foreground with background color.
 END
-eyedropper = Eyedropper Tool
-zoom = Zoom Tool
-hand = Hand Tool
-move = Move Tool
-slice = Slice Tool
-paint_bucket = Paint Bucket Tool
-gradient = Gradient Tool
-line = Line Tool
-curve = Curve Tool
-rectangle = Rectangle Tool
-filled_rectangle = Filled Rectangle Tool
-ellipse = Ellipse Tool
-filled_ellipse = Filled Ellipse Tool
-contour = Contour Tool
-polygon = Polygon Tool
-blur = Blur Tool
-jumble = Jumble Tool
-shortcut = Shortcut: {0}
-preview_hide = Hide Preview
-preview_show = Show Preview
+eyedropper = Ferramenta Conta Gotas #Eydropper Tool
+zoom = Ferramenta Zoom #Zoom Tool
+hand = Ferramenta Mão #Hand Tool
+move = Ferramenta Mover #Move Tool
+slice = Ferramenta Cortar #Slice Tool
+paint_bucket = Ferramenta Balde de Tinta #Paint Bucket Tool
+gradient = Ferramenta Gradiente #Gradient Tool
+line = Ferramenta Linha #Line Tool
+curve = Ferramenta Curva #Curve Tool
+rectangle = Ferramenta Retângulo #Rectangle Tool
+filled_rectangle = Ferramenta Retângulo Preenchido #Filled Rectangle Tool
+ellipse = Ferramenta Elipse #Ellipse Tool
+filled_ellipse = Ferramenta Elipse Preenchida #Filled Ellipse Tool
+contour = Ferramenta Contorno #Contour Tool
+polygon = Ferramenta Polígono #Polygon Tool
+blur = Ferramenta Desfoque #Blur Tool
+jumble = Jumble Tool--
+shortcut = Atalho: {0} #Shortcut: {0}
+preview_hide = Ocultar Prévia #Hide Preview
+preview_show = Exibir Prévia #Show Preview
 
 [undo_history]
-title = Undo History
+title = Desfazer História #Undo History
 
 [user_data]
-user_data = User Data:
-color = Color:
+user_data = Informações do Usuário: #User Data:
+color = Cor: #Color:
 
 [webp_options]
-title = WebP Options
-save_as = Save as:
-animation_loop = Animation &Loop
-type = Type:
-simple_webp = Simple: Good Lossless Compression
-lossless_webp = Lossless WebP
-compression = Compression:
-image_hint = Image Hint:
-image_hint_default = Default
-image_hint_picture = Picture
-image_hint_photo = Photo
-image_hint_graph = Graph
-lossy_webp = Lossy WebP
-quality = Quality:
-image_preset = Image Preset:
-image_preset_default = Default
-image_preset_picture = Picture
-image_preset_photo = Photo
-image_preset_drawing = Drawing
-image_preset_icon = Icon
-image_preset_text = Text
+title = Opções de WebP #WebP Options
+save_as = Salvar como: #Save as:
+animation_loop = &Ciclo de Animação #Animation &Loop
+type = Tipo: #Type:
+simple_webp = Simples: Boa Compressão Sem Perda #Simple: Good Lossless Compression
+lossless_webp = Lossless WebP--
+compression = Compressão #Compression
+image_hint = Image Hint:--
+image_hint_default = Padrão #Default
+image_hint_picture = Imagem #Picture
+image_hint_photo = Foto #Photo
+image_hint_graph = Gráfico #Graph
+lossy_webp = Lossy WebP--
+quality = Qualidade #quality:
+image_preset = Image Preset:--
+image_preset_default = Padrão #Default
+image_preset_picture = Imagem #Picture
+image_preset_photo = Foto #Photo
+image_preset_drawing = Desenho #Drawning
+image_preset_icon = Ícone #Icon
+image_preset_text = Texto #Text
 
 [symmetry]
-toggle = Toggle Symmetry
-toggle_horizontal = Toggle Horizontal Symmetry
-toggle_vertical = Toggle Vertical Symmetry
+toggle = Ativar Simetria #Toggle Symmetry
+toggle_horizontal = Ativar Simetria Horizontal #Toggle Horizontal Symmetry
+toggle_vertical = Ativar Simetria Vertical #Toggle Vertical Symmetry
