--- a/br.ini
+++ b/br.ini
@@ -49,133 +49,133 @@ Deseja deletar o atalho '{0}' ? #<<Do you really want to delete '{0}' keyboard s
 ||&Sim||&Não #||&Yes||&No
 END
 empty_rect_importing_sprite_sheet = <<<END
-Import Sprite Sheet
-<<The specified rectangle does not create any tile.
-<<Select a rectangle inside the sprite region.
+Importar Sprite Sheet #Import Sprite Sheet
+<<O retângulo especificado não criou nenhum tile. #<<The specified rectangle does not create any tile.
+Selecione um retângulo dentro da região do sprite #<<Select a rectangle inside the sprite region.
 ||&OK
 END
-error_loading_file = Error<<Error loading file: {0}||&OK
-error_saving_file = Error<<Error saving file: {0}||&OK
+error_loading_file = Erro<<Erro ao carregar o arquivo: {0} #Error<<Error loading file: {0}||&OK
+error_saving_file =  #Error<<Error saving file: {0}||&OK
 export_animation_in_sequence = <<<END
-Notice
-<<Do you want to export the animation in {0} files?
+Aviso #Notice
+<<Deseja exportar a animação em {0} arquivos? #<<Do you want to export the animation in {0} files?
 <<{1}, {2}...
-||&Agree||&Cancel
+||&Aceitar||&Cancelar #||&Agree||&Cancel
 END
 file_format_doesnt_support_error = <<<END
-Error
-<<File format ".{0}" doesn't support:
+Erro #Error
+<<O formato ".{0}" não é suportado: #<<File format ".{0}" doesn't support:
 {1}
-<<You must select other format.
-<<Use ".ase" to keep all the sprite information.
+Você precisa selecionar outro formato. #<<You must select other format.
+Use ".ase" para manter todas as informações do sprite. #<<Use ".ase" to keep all the sprite information.
 ||&OK
 END
 file_format_doesnt_support_warning = <<<END
-Warning
-<<File format ".{0}" doesn't support:
+Atenção #Warning
+<<Arquivo do formato ".{0}" não suportado: #<<File format ".{0}" doesn't support:
 {1}
-<<You can use ".ase" format to keep all this information.
-<<Do you want continue with ".{0}" anyway?
-||&Yes||&No
+Você pode usar o formato ".ase" para manter todas as informações. #<<You can use ".ase" format to keep all this information.
+<<Deseja continuar usando ".{0}"? #<<Do you want continue with ".{0}" anyway?
+||&Sim||&Não #||&Yes||&No
 END
-file_format_alpha_channel = Alpha channel
-file_format_frame_tags = Frame tags
-file_format_frames = Frames
-file_format_grayscale_mode = Grayscale mode
-file_format_indexed_mode = Indexed mode
-file_format_layers = Layers
-file_format_palette_changes = Palette changes between frames
-file_format_rgb_mode = RGB mode
+file_format_alpha_channel = Canal de Alpha #Alpha channel
+file_format_frame_tags = Marcadores de Quadros #Frame tags
+file_format_frames = Quadros #Frames
+file_format_grayscale_mode = Modo de Escala de Cinza #Grayscale mode
+file_format_indexed_mode = Modo indexado #Indexed mode
+file_format_layers = Camadas #Layers
+file_format_palette_changes = Alterações de paleta entre quadros #Palette changes between frames
+file_format_rgb_mode = Modo RGB #RGB mode
 invalid_chars_in_filename = <<<END
-Error
-<<The file name cannot contain the following character(s):
+Erro #Error
+O arquivo não pode conter o(s) caractere(s): #<<The file name cannot contain the following character(s):
 << {0}
 ||&OK
 END
 invalid_fg_or_bg_colors = <<<END
 Aseprite
-<<The current selected foreground and/or background color
-<<is out of range. Select a valid color in the palette.
+A cor do primeiro plano e/ou o plano de fundo #<<The current selected foreground and/or background color
+Está(ão) fora do alcance. Selecione uma cor válida da paleta. #<<is out of range. Select a valid color in the palette.
 ||&OK
 END
-job_working = {0}<<Working...||&Cancel
-nothing_to_report = Crash Report<<Nothing to report||&OK
+job_working = {0}<<Processando...||&Cancelar #{0}<<Working...||&Cancel
+nothing_to_report = Relatório de Erros<<Nenhum relatório||&OK #Crash Report<<Nothing to report||&OK
 install_extension = <<<END
-Warning
-<<Do you really want to install the given extension?
+Atenção #Warning
+Deseja realmente instalar a extensão selecionada? #<<Do you really want to install the given extension?
 <<'{0}'
-||&Install||&Cancel
+||&Instalar||&Cancelar #||&Install||&Cancel
 END
 uninstall_extension_warning = <<<END
-Warning
-<<Do you really want to uninstall '{0}' extension?
-||&Yes||&No
+Atenção #Warning
+Deseja realmente desinstalar a(s) extensão(ões) '{0}'? #<<Do you really want to uninstall '{0}' extension?
+||&Sim||&Não #||&Yes||&No
 END
 unknown_output_file_format_error = <<<END
 Aseprite
-<<Unknown file format '{0}' in output filename
+Formato '{0}' desconhecido no nome do arquivo #<<Unknown file format '{0}' in output filename
 ||&OK
 END
 update_screen_ui_scaling_with_theme_values = <<<END
-Update Screen/UI Scaling
-<<The new theme '{0}' wants to adjust some values for you:
-<<  Screen Scaling: {1}% -> {2}%
-<<  UI Scaling: {3}% -> {4}%
-<<Allow these changes?
-||&Adjust Scaling||&Don't Adjust Scaling
+Atualizar escala da Tela/Interface #Update Screen/UI Scaling
+O novo tema '{0}' deseja ajustar alguns valores pra você: #<<The new theme '{0}' wants to adjust some values for you:
+<<  Escala da tela: {1}% -> {2}% #<<  Screen Scaling: {1}% -> {2}%
+<<  Escala da Interface: {3}% -> {4}% #<<  UI Scaling: {3}% -> {4}%
+Aceitar essas alterações? #<<Allow these changes?
+||&Ajustar Escala||&Não ajustar #||&Adjust Scaling||&Don't Adjust Scaling
 END
 update_extension = <<<END
-Update Extension
-<<The extension '{0}' already exists.
-<<Do you want to {1} from v{2} to v{3}?
-||&Yes||&No
+Atualização Extensão #Update Extension
+A extensão '{0}' já existe. #<<The extension '{0}' already exists.
+Deseja subistituir para {1} de v{2} para v{3}? #<<Do you want to {1} from v{2} to v{3}?
+||&Sim||&Não #||&Yes||&No
 END
 update_extension_downgrade = downgrade
 update_extension_upgrade = upgrade
-recent_file_doesnt_exist = Aseprite<<The selected file doesn't exist||&OK
-recent_folder_doesnt_exist = Aseprite<<The selected folder doesn't exist||&OK
+recent_file_doesnt_exist = Aseprite<<O arquivo selecionado não existe||&OK #Aseprite<<The selected file doesn't exist||&OK
+recent_folder_doesnt_exist = Aseprite<<A pasta selecionada não existe||&OK #Aseprite<<The selected folder doesn't exist||&OK
 restart_by_preferences = <<<END
 Aseprite
-<<You must restart the program to see your changes to:{0}
+Você precisa reiniciar o programar para aplicar as alterações para:{0} #<<You must restart the program to see your changes to:{0}
 ||&OK
 END
-restart_by_preferences_save_recovery_data_period = Automatically save recovery data every X minutes
+restart_by_preferences_save_recovery_data_period = Salvar dados de recuperação automaticamente a cada X minutos #Automatically save recovery data every X minutes
 restore_all_shortcuts = <<<END
-Warning
-<<Do you want to restore all keyboard shortcuts
-<<to their original default settings?
-||&Yes||&No
+Atenção #Warning
+<<Deseja restaurar todos os atalhos de teclado #<<Do you want to restore all keyboard shortcuts
+<<para as cofigurações originais? #<<to their original default settings?
+||&Sim||&Não #||&Yes||&No
 END
 run_script = <<<END
-Run Script
-<<Do you want to run the following script?
+Executar Script #Run Script
+<<Deseja executar estes scripts? #<<Do you want to run the following script?
 <<
 <<  {0}
 <<
-<<WARNING: Scripts can crash Aseprite, please save your work
-<<before running a script.
-||&Run||&Cancel
+AVISO: Scripts podem causar falha no Aseprite, por favor, salve seu trabalho #<<WARNING: Scripts can crash Aseprite, please save your work
+Antes de executar o script. #<<before running a script.
+||&Executar||&Cancelar #||&Run||&Cancel
 END
 save_sprite_changes = <<<END
-Warning
-<<Saving changes to the sprite
-<<"{0}" before {1}?
-||&Save||Do&n't Save||&Cancel
+Atenção #Warning
+Salvar alterações no sprite #<<Saving changes to the sprite
+<<"{0}" antes de {1}?#<<"{0}" before {1}?
+||&Salvar||$Não salvar||&Cancelar #||&Save||Do&n't Save||&Cancel
 END
-save_sprite_changes_quitting = quitting
-save_sprite_changes_closing = closing
-overwrite_existent_file = Warning<<File exists, overwrite it?<<{0}||&Yes||&No||&Cancel
+save_sprite_changes_quitting = saindo #quitting
+save_sprite_changes_closing = fechando #closing
+overwrite_existent_file = Aviso<<Arquivo existente, sobrescrever-lo?<<{0}||&Sim||&Não||&Cancelar #Warning<<File exists, overwrite it?<<{0}||&Yes||&No||&Cancel
 overwrite_files_on_export_sprite_sheet = <<<END
-Export Sprite Sheet Warning
-<<Do you want to overwrite the following file(s)?
+Aviso de exportação do Sprite Sheet #Export Sprite Sheet Warning
+Deseja sobrescrever estes arquivo(s)? #<<Do you want to overwrite the following file(s)?
 {0}
-||&Yes||&No
+||&Sim||&Não #||&Yes||&No
 END
 overwrite_files_on_export = <<<END
-Export Warning
-<<Do you want to overwrite the following file?
+Aviso de Exportação #Export Warning
+<<Deseja sobrescrever este arquivo? #<<Do you want to overwrite the following file?
 <<{0}
-||&Yes||&No
+||&Sim||&Não #||&Yes||&No
 END
 
 [brush_slot_params]
