translate: brush_slot_params

--- a/br.ini
+++ b/br.ini
@@ -179,19 +179,19 @@ Aviso de Exportação #Export Warning
 END
 
 [brush_slot_params]
-brush = Brush:
-brush_type = Type
-brush_size = Size
-brush_angle = Angle
-color = Color:
-foreground = Foreground
-background = Background
-image_color = Image Color
-ink = Ink:
-ink_type = Type
-ink_opacity = Opacity
+brush = Pincel: #Brush:
+brush_type = Tipo #Type
+brush_size = Tamanho #Size
+brush_angle = Ângulo #Angle
+color = Cor: #Color:
+foreground = Plano Frontal #Foreground
+background = Plano de Fundo #Background
+image_color = Cor da Imagem #Image Color
+ink = Tinta: #Ink:
+ink_type = Tipo #Type
+ink_opacity = Opacidade #Opacity
 extras = Extras:
-shade = Shade
+shade = Sombra #Shade
 pixel_perfect = Pixel-Perfect
 
 [cel_movement_popup_menu]
