translate: cel_movement_popup_menu, cel_popup_menu

--- a/br.ini
+++ b/br.ini
@@ -195,14 +195,14 @@ shade = Sombra #Shade
 pixel_perfect = Pixel-Perfect
 
 [cel_movement_popup_menu]
-move = &Move
-copy = &Copy
-cancel = Cancel
+move = &Mover #&Move
+copy = &Copiar #&Copy
+cancel = Cancelar #Cancel
 
 [cel_popup_menu]
-clear = &Delete
-unlink = &Unlink
-link_cels = &Link Cels
+clear = &Deletar #&Delete
+unlink = Q&uebrar Link #&Unlink
+link_cels = &Linkar Células #&Link Cels
 
 [commands]
 About = About
