translate: document_tab_popup_menu, canvas_size

--- a/br.ini
+++ b/br.ini
@@ -440,35 +440,35 @@ Zoom_Out = Menos Zoom #Zoom Out
 Zoom_Set = Zoom {0}%
 
 [document_tab_popup_menu]
-duplicate_view = Duplicate &View
-open_with_os = &Open with OS
-open_in_folder = Open in &Folder
+duplicate_view = Duplicar &Visualizador #Duplicate &View
+open_with_os = Abrir com o S&O #&Open with OS
+open_in_folder = Abrir na &Pasta #Open in &Folder
 
 [canvas_size]
-title = Canvas Size
-size = Size:
-width = Width:
-height = Height:
-borders = Borders:
-left = Left:
+title = Tamanho do Canvas #Canvas Size
+size = Tamanho: #Size:
+width = Largura: #Width:
+height = Altura: #Height:
+borders = Bordas: #Borders:
+left = Esquerda: #Left:
 left_tooltip = <<<END
-Columns to be added/removed in the left side.
-Use a negative number to remove columns.
+Colunas a serem adicionadas/removidas no lado esquerdo. #Columns to be added/removed in the left side.
+Use valores negativos para remover as colunas. #Use a negative number to remove columns.
 END
-top = Top:
+top = Superior: #Top:
 top_tooltip = <<<END
-Rows to be added/removed in the top side.
-Use a negative number to remove rows
+Linhas a serem adicionadas/removidas no lado superior. #Rows to be added/removed in the top side.
+Use valores negativos para remover as linhas. #Use a negative number to remove rows
 END
-right = Right:
+right = Direita: #Right:
 right_tooltip = <<<END
-Columns to be added/removed in the right side.
-Use a negative number to remove columns.
+Colunas a serem adicionadas/removidas no lado direito. #Columns to be added/removed in the right side.
+Use valores negativos para remover as colunas. #Use a negative number to remove columns.
 END
-bottom = Bottom:
+bottom = Inferiror: #Bottom:
 bottom_tooltip = <<<END
-Rows to be added/removed in the bottom side.
-Use a negative number to remove rows.
+Linhas a serem adicionadas/removidas no lado inferior. #Rows to be added/removed in the bottom side.
+Ese valores negativos para remover as linhas. #Use a negative number to remove rows
 END
 
 [cel_properties]
