translate: cel_properties, color_curve_point

--- a/br.ini
+++ b/br.ini
@@ -472,17 +472,17 @@ Ese valores negativos para remover as linhas. #Use a negative number to remove r
 END
 
 [cel_properties]
-title = Cel Properties
-opacity = Opacity:
-user_data_tooltip = User Data
+title = Propriedades da Célula #Cel Properties
+opacity = Opacidade: #Opacity:
+user_data_tooltip = Dados do Usuário #User Data
 
 [color_curve_point]
-title = Point Properties
+title = Propriedades do Ponto #Point Properties
 x = X:
 y = Y:
 ok = &OK
-cancel = &Cancel
-delete = &Delete
+cancel = &Cancelar #&Cancel
+delete = &Deletar #&Delete
 
 [color_mode]
 title = Color Mode
